change permalink config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ github_username:  jekyll
 markdown: kramdown
 
 # Customs
-permalink: :title
+permalink: none
 sitemap:
     file: "/sitemap.xml"
     exclude:
